--- a/oop/Introduction to Object Oriented Programming.ipynb
+++ b/oop/Introduction to Object Oriented Programming.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
     "    }\n",
     "    \n",
     "    public void updateWinPercentage() {\n",
-    "        if (this.gamesWon == 0 && this.gamesLost == 0) {\n",
+    "        if (this.gamesWon + this.gamesLost == 0) {\n",
     "            this.winPercentage = 0;\n",
     "        }\n",
     "        this.winPercentage = 100 * (double)this.gamesWon \n",
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,20 +106,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sacramento Kings: 0 won 0 lost, 0.00%\n",
-      "LA Lakers: 0 won 0 lost, 0.00%\n",
-      "Sacramento Kings: 1 won 0 lost, 100.00%\n",
-      "LA Lakers: 0 won 1 lost, 0.00%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "System.out.println(kings.toString());\n",
     "System.out.println(lakers.toString());\n",
@@ -141,20 +130,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sacramento Kings: 1 won 10 lost, 100.00%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "kings.gamesLost += 10;\n",
-    "System.out.println(kings.toString());"
+    "System.out.println(kings.toString());\n",
+    "\n",
+    "lakers.gamesWon -= 10;\n",
+    "lakers.updateWinPercentage();\n",
+    "System.out.println(lakers.toString());"
    ]
   },
   {
@@ -167,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +172,8 @@
     "    \n",
     "    public String getName() { return this.name; }\n",
     "    public int getGamesWon() { return this.gamesWon; }\n",
-    "    public int getVamesLost() { return this.gamesLost; }\n",
+    "    public int getGamesLost() { return this.gamesLost; }\n",
+    "    public double getWinPercentage() { return this.winPercentage; }\n",
     "    \n",
     "    public void wonGame() { \n",
     "        this.gamesWon++; \n",
@@ -200,7 +186,7 @@
     "    }\n",
     "    \n",
     "    private void updateWinPercentage() {\n",
-    "        if (this.gamesWon == 0 && this.gamesLost == 0) {\n",
+    "        if (this.gamesWon + this.gamesLost == 0) {\n",
     "            this.winPercentage = 0;\n",
     "        }\n",
     "        this.winPercentage = 100 * (double)this.gamesWon \n",
@@ -224,21 +210,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sacramento Kings: 0 won 0 lost, 0.00%\n",
-      "LA Lakers: 0 won 0 lost, 0.00%\n",
-      "Sacramento Kings: 1 won 0 lost, 100.00%\n",
-      "LA Lakers: 0 won 1 lost, 0.00%\n",
-      "Sacramento Kings: 1 won 10 lost, 9.09%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "Team kings = new Team(\"Sacramento Kings\");\n",
     "Team lakers = new Team(\"LA Lakers\");\n",
@@ -272,6 +246,112 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Common Methods\n",
+    "\n",
+    "Most classes you write will have some methods in common\n",
+    "1. toString() - this method returns a string representation of the object\n",
+    "2. equals(Object o) - this method compares the object with another object\n",
+    "3. compareTwo(Object o) - this method checks if two objects are equal to each other. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "public class Team {\n",
+    "    \n",
+    "    private String name;\n",
+    "    private int gamesWon;\n",
+    "    private int gamesLost;\n",
+    "    private double winPercentage;\n",
+    "    \n",
+    "    public Team(String name) {\n",
+    "        this.name = name;\n",
+    "        this.gamesWon = 0;\n",
+    "        this.gamesLost = 0;\n",
+    "        this.winPercentage = 0;\n",
+    "    }\n",
+    "    \n",
+    "    public String getName() { return this.name; }\n",
+    "    public int getGamesWon() { return this.gamesWon; }\n",
+    "    public int getGamesLost() { return this.gamesLost; }\n",
+    "    public double getWinPercentage() { return this.winPercentage; }\n",
+    "    \n",
+    "    public void wonGame() { \n",
+    "        this.gamesWon++; \n",
+    "        this.updateWinPercentage();\n",
+    "    }\n",
+    "    \n",
+    "    public void lostGame() { \n",
+    "        this.gamesLost++; \n",
+    "        this.updateWinPercentage();\n",
+    "    }\n",
+    "    \n",
+    "    private void updateWinPercentage() {\n",
+    "        if (this.gamesWon + this.gamesLost == 0) {\n",
+    "            this.winPercentage = 0;\n",
+    "        }\n",
+    "        this.winPercentage = 100 * (double)this.gamesWon \n",
+    "               / (this.gamesWon + this.gamesLost);\n",
+    "    }\n",
+    "    \n",
+    "    public boolean equals(Object o) {\n",
+    "        if (o instanceof Team) {\n",
+    "            Team other = (Team) o;\n",
+    "            return this.gamesWon == other.getGamesWon() \n",
+    "                   && this.gamesLost == other.getGamesLost()\n",
+    "                   && this.name.equals(other.getName());\n",
+    "        }\n",
+    "        return false;\n",
+    "    }\n",
+    "    \n",
+    "    public int compareTo(Object o) {\n",
+    "        if (o instanceof Team) {\n",
+    "            Team other = (Team) o;\n",
+    "            return (int)(this.winPercentage - other.getWinPercentage());\n",
+    "        }\n",
+    "        return -1;\n",
+    "    }\n",
+    "    \n",
+    "    public String toString() {\n",
+    "        return String.format(\"%s: %d won %d lost, %.2f%%\",\n",
+    "               this.name, this.gamesWon, this.gamesLost, \n",
+    "               this.winPercentage);\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Team kings = new Team(\"Sacramento Kings\");\n",
+    "Team lakers = new Team(\"LA Lakers\");\n",
+    "System.out.println(\"Comparing kings and lakers \" + kings.compareTo(lakers));\n",
+    "kings.wonGame();\n",
+    "lakers.lostGame();\n",
+    "System.out.println(\"Comparing kings and lakers \" + kings.compareTo(lakers));\n",
+    "Team otherKings = new Team(\"Sacramento Kings\");\n",
+    "System.out.println(\"Are two kings equal? \" + kings.equals(otherKings));\n",
+    "otherKings.wonGame();\n",
+    "System.out.println(\"Are two kings equal? \" + kings.equals(otherKings));"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The keyword `instanceof` checks to see if some object is an instance of the given type. So `o instanceof Team` evaluates to true if `o` can be viewed as a `Team` and false if not. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Defining Static"
    ]
   },
@@ -288,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,6 +414,24 @@
     "               / (this.gamesWon + this.gamesLost);\n",
     "    }\n",
     "    \n",
+    "    public boolean equals(Object o) {\n",
+    "        if (o instanceof Team) {\n",
+    "            Team other = (Team) o;\n",
+    "            return this.gamesWon == other.getGamesWon() \n",
+    "                   && this.gamesLost == other.getGamesLost()\n",
+    "                   && this.name.equals(other.getName());\n",
+    "        }\n",
+    "        return false;\n",
+    "    }\n",
+    "    \n",
+    "    public int compareTo(Object o) {\n",
+    "        if (o instanceof Team) {\n",
+    "            Team other = (Team) o;\n",
+    "            return (int)(this.winPercentage - other.getWinPercentage());\n",
+    "        }\n",
+    "        return -1;\n",
+    "    }\n",
+    "    \n",
     "    public String toString() {\n",
     "        return String.format(\"%s: %d won %d lost, %.2f%%\",\n",
     "               this.name, this.gamesWon, this.gamesLost, \n",
@@ -344,20 +442,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sacramento Kings: 0 won 0 lost, 0.00%\n",
-      "LA Lakers: 0 won 0 lost, 0.00%\n",
-      "Sacramento Kings: 1 won 0 lost, 100.00%\n",
-      "LA Lakers: 0 won 1 lost, 0.00%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "Team kings = new Team(\"Sacramento Kings\");\n",
     "Team lakers = new Team(\"LA Lakers\");\n",
@@ -387,11 +474,11 @@
     "\n",
     "When we define a primitive, for example `int primitive = 1;`, the variable `primitive` points to (aka references) some memory address $i$ and the data at memory address $i$ is the value of `primitive` (ie 1).\n",
     "\n",
-    "![storing a primative](memory2.png)\n",
+    "![storing a primative](primitive_in_memory.png)\n",
     "\n",
     "However, when we define an Object, for exmample `SomeClass nonPrimitive = new SomeClass();`, the variable `nonPrimitive` references some memory address $j$ but the data at memory adress $j$ is another memory address $k$. The data at memory address $k$ is the data corresponding to `nonPrimitive`.\n",
     "\n",
-    "![storing an object](memory3.png)\n",
+    "![storing an object](non_primitive_in_memory.png)\n",
     "\n",
     "This distinction comes into play when we pass variables into methods. Java \"passes by reference value\". That means that when if I have a variable `x` that references some memory address $A$, when I pass `x` into a method the computer will copy the data at $A$ and save it at a new memory address $B$.\n",
     "\n",
@@ -402,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +532,7 @@
        "java.io.PrintStream@631330c"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +570,7 @@
        "java.io.PrintStream@631330c"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -504,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +608,7 @@
        "java.io.PrintStream@631330c"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
