Adding code style notes

--- a/08-object-oriented-programming/Introduction to Object Oriented Programming.ipynb
+++ b/08-object-oriented-programming/Introduction to Object Oriented Programming.ipynb
@@ -251,7 +251,7 @@
     "Most classes you write will have some methods in common\n",
     "1. toString() - this method returns a string representation of the object\n",
     "2. equals(Object o) - this method compares the object with another object\n",
-    "3. compareTwo(Object o) - this method checks if two objects are equal to each other. "
+    "3. compareTo(Object o) - this method checks if two objects are equal to each other. "
    ]
   },
   {
